test/integration/bad/embedded_laplace/stanc.expected
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility1.stan
Semantic error in 'autodiff_incompatibility1.stan', line 56, column 29 to column 40:
   -------------------------------------------------
    54:  model {
    55:  
    56:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    57:                                    K_function, (x, n_obs, alpha, rho));
    58:  }
   -------------------------------------------------

The function "algebra_solver", called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility2.stan
Semantic error in 'autodiff_incompatibility2.stan', line 59, column 43 to column 54:
   -------------------------------------------------
    57:  
    58:  generated quantities {
    59:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                                                    ^
    60:                          K_function, (x, n_obs, alpha, rho));
    61:  }
   -------------------------------------------------

The function "ode_rk45", called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility3.stan
Semantic error in 'autodiff_incompatibility3.stan', line 51, column 43 to column 54:
   -------------------------------------------------
    49:  
    50:  generated quantities {
    51:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                                                    ^
    52:                          K_function, (x, n_obs, alpha, rho));
    53:  }
   -------------------------------------------------

The function "reduce_sum", called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility4.stan
Semantic error in 'autodiff_incompatibility4.stan', line 50, column 43 to column 54:
   -------------------------------------------------
    48:  
    49:  generated quantities {
    50:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                                                    ^
    51:                          K_function, (x, n_obs, alpha, rho));
    52:  }
   -------------------------------------------------

The function "reduce_sum", called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility5.stan
Semantic error in 'autodiff_incompatibility5.stan', line 54, column 43 to column 54:
   -------------------------------------------------
    52:  
    53:  generated quantities {
    54:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                                                    ^
    55:                          K_function, (x, n_obs, alpha, rho));
    56:  }
   -------------------------------------------------

The function "algebra_solver", called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback1.stan
Semantic error in 'bad_callback1.stan', line 36, column 29 to column 40:
   -------------------------------------------------
    34:  }
    35:  model {
    36:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    37:                                    K_function, (x, n_obs, alpha, rho));
    38:  }
   -------------------------------------------------

Function "ll_function" does not have a valid signature for use in "laplace_marginal":
Expected function returning real but got function returning void.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback2.stan
Semantic error in 'bad_callback2.stan', line 38, column 29 to column 49:
   -------------------------------------------------
    36:  }
    37:  model {
    38:    target += laplace_marginal(ll_function_jacobian, (eta, log_ye, y),
                                      ^
    39:                                    K_function, (x, n_obs, alpha, rho));
    40:  }
   -------------------------------------------------

Function "ll_function_jacobian" does not have a valid signature for use in 
"laplace_marginal":
Expected a pure function but got a _jacobian function.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback3.stan
Semantic error in 'bad_callback3.stan', line 28, column 29 to column 40:
   -------------------------------------------------
    26:  model {
    27:    real ll_function;
    28:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    29:                                    K_function, (x, n_obs, alpha, rho));
    30:  }
   -------------------------------------------------

A returning function was expected but a non-function value "ll_function" was supplied.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback4.stan
Semantic error in 'bad_callback4.stan', line 37, column 29 to column 40:
   -------------------------------------------------
    35:  model {
    36:  
    37:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    38:                                    K_function, (x, n_obs, alpha, rho));
    39:  }
   -------------------------------------------------

Function "ll_function" does not have a valid signature for use in "laplace_marginal":
The first argument is marked data-only. (Local variables are assumed to
depend on parameters; same goes for function inputs unless they are marked
with the keyword "data".)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback5.stan
Semantic error in 'bad_callback5.stan', line 37, column 29 to column 40:
   -------------------------------------------------
    35:  }
    36:  model {
    37:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    38:                                    K_function, (x, n_obs, alpha, rho));
    39:  }
   -------------------------------------------------

Function "ll_function" does not have a valid signature for use in "laplace_marginal":
The first argument must be vector but got complex_vector.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward1.stan
Semantic error in 'bad_forward1.stan', line 37, column 42 to column 47:
   -------------------------------------------------
    35:  model {
    36:  
    37:    target += laplace_marginal(ll_function, {2.0},
                                                   ^
    38:                                    K_function, (x, n_obs, alpha, rho));
    39:  }
   -------------------------------------------------

Forwarded arguments to 'll_function' in call to 'laplace_marginal' must be a tuple.
Instead found type array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward2.stan
Semantic error in 'bad_forward2.stan', line 37, column 42 to column 58:
   -------------------------------------------------
    35:  model {
    36:  
    37:    target += laplace_marginal(ll_function, (eta, y, log_ye),
                                                   ^
    38:                                    K_function, (x, n_obs, alpha, rho));
    39:  }
   -------------------------------------------------

Cannot call "ll_function" with arguments forwarded from call to
"laplace_marginal":
The second argument (excluding the latent gaussian vector argument) must be
vector but got array[] int.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward3.stan
Semantic error in 'bad_forward3.stan', line 36, column 42 to column 50:
   -------------------------------------------------
    34:  }
    35:  model {
    36:    target += laplace_marginal(ll_function, (eta, y),
                                                   ^
    37:                                    K_function, (x, n_obs, alpha, rho));
    38:  }
   -------------------------------------------------

Cannot call "ll_function" with arguments forwarded from call to
"laplace_marginal":
Expected 3 arguments (excluding the latent gaussian vector argument)
but got 2 arguments.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward4.stan
Semantic error in 'bad_forward4.stan', line 37, column 46 to column 71:
   -------------------------------------------------
    35:  model {
    36:    target += laplace_marginal(ll_function, (eta, log_ye, y),
    37:                                    K_function, (x, alpha, rho, rho, rho));
                                                       ^
    38:  }
   -------------------------------------------------

Cannot call "K_function" with arguments forwarded from call to
"laplace_marginal":
Expected 4 arguments but got 5 arguments.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward5.stan
Semantic error in 'bad_forward5.stan', line 38, column 32 to column 56:
   -------------------------------------------------
    36:  generated quantities {
    37:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
    38:                      K_function, (x, n_obs, alpha, {rho}));
                                         ^
    39:  }
   -------------------------------------------------

Cannot call "K_function" with arguments forwarded from call to
"laplace_latent_rng":
The fourth argument must be real but got array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward6.stan
Semantic error in 'bad_forward6.stan', line 49, column 43 to column 54:
   -------------------------------------------------
    47:  
    48:  generated quantities {
    49:    vector[n_obs] theta = laplace_latent_rng(ll_function, (1,1, log_ye, y),
                                                    ^
    50:                      K_function, (x, n_obs, alpha, rho));
    51:  }
   -------------------------------------------------

No unique minimum promotion found for function "ll_function".
Overloaded functions must not have multiple equally valid promotion paths.
This function has several:
(vector, int, real, vector, array[] int) => real
(vector, real, int, vector, array[] int) => real
Consider defining a new signature for the exact types needed or
re-thinking existing definitions.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward7.stan
Semantic error in 'bad_forward7.stan', line 2, column 12 to column 69:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_neg_binomial_2_log_lpmf(1 | 1, 1, 1);
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_marginal_tol_neg_binomial_2_log_lpmf"
for the likelihood:
The first argument must be array[] int but got int.
Expected the arguments to start with:
(array[] int, array[] int, vector, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward8.stan
Semantic error in 'bad_forward8.stan', line 2, column 2 to column 55:
   -------------------------------------------------
     1:  model {
     2:    1 ~ laplace_marginal_tol_neg_binomial_2_log(1, 1, 1);
           ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_marginal_tol_neg_binomial_2_log_lupmf"
for the likelihood:
The first argument must be array[] int but got int.
Expected the arguments to start with:
(array[] int, array[] int, vector, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward9.stan
Semantic error in 'bad_forward9.stan', line 37, column 32 to column 54:
   -------------------------------------------------
    35:  model {
    36:    target += laplace_marginal(ll_function, (eta, log_ye, y),
    37:                      K_function, (x, n_obs, alpha, rho));
                                         ^
    38:  }
   -------------------------------------------------

Cannot call "K_function" with arguments forwarded from call to
"laplace_marginal":
The fourth argument is marked data-only. (Local variables are assumed to
depend on parameters; same goes for function inputs unless they are marked
with the keyword "data".)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_overload.stan
Semantic error in 'bad_overload.stan', line 2, column 7 to column 51:
   -------------------------------------------------
     1:  functions {
     2:    real laplace_marginal_tol_neg_binomial_2_log_lpmf(int y) {
                ^
     3:      return 1.0;
     4:    }
   -------------------------------------------------

Identifier "laplace_marginal_tol_neg_binomial_2_log_lpmf" clashes with a non-overloadable Stan Math library function.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_theta0.stan
Semantic error in 'bad_theta0.stan', line 42, column 79 to column 88:
   -------------------------------------------------
    40:  model {
    41:    target += laplace_marginal_tol(ll_function, (eta, log_ye, y),
    42:                                    K_function, (x, n_obs, alpha, rho), theta_0, tolerance, max_num_steps,
                                                                                        ^
    43:                hessian_block_size, solver, max_steps_line_search);
    44:  }
   -------------------------------------------------

The first control parameter (initial guess) to "laplace_marginal_tol" must be
vector. Instead found type array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol1.stan
Semantic error in 'bad_tol1.stan', line 40, column 56 to column 63:
   -------------------------------------------------
    38:  generated quantities {
    39:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
    40:                      K_function, (x, n_obs, alpha, rho), theta_0, 1);
                                                                 ^
    41:  }
   -------------------------------------------------

Received 2 extra arguments at the end of the call to "laplace_latent_rng".
Did you mean to call the _tol version?
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol2.stan
Semantic error in 'bad_tol2.stan', line 39, column 56 to column 63:
   -------------------------------------------------
    37:  generated quantities {
    38:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
    39:                      K_function, (x, n_obs, alpha, rho), theta_0, 1,2,3,4,5);
                                                                 ^
    40:  }
   -------------------------------------------------

Received 6 extra arguments at the end of the call to "laplace_latent_rng".
Did you mean to call the _tol version?
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol3.stan
Semantic error in 'bad_tol3.stan', line 39, column 56 to column 63:
   -------------------------------------------------
    37:  generated quantities {
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      K_function, (x, n_obs, alpha, rho), theta_0, 1,2,3,4);
                                                                 ^
    40:  }
   -------------------------------------------------

Received 5 control arguments at the end of the call to "laplace_latent_tol_rng".
Expected 6 arguments for the control parameters instead.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol4.stan
Semantic error in 'bad_tol4.stan', line 46, column 37 to column 50:
   -------------------------------------------------
    44:    target += laplace_marginal_tol(ll_function, (eta, log_ye, y),
    45:                                  K_function, (x, n_obs, alpha, rho), theta_0,
    46:                                  eta, max_num_steps, hessian_block_size,
                                              ^
    47:                                  solver, max_steps_line_search);
    48:  }
   -------------------------------------------------

The control parameters to "laplace_marginal_tol" must all be data-only,
but the second control parameter (tolerance) here is not. (Local variables
are assumed to depend on parameters; same goes for function inputs unless
they are marked with the keyword "data".)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol5.stan
Semantic error in 'bad_tol5.stan', line 38, column 24 to line 39, column 77:
   -------------------------------------------------
    36:  
    37:  generated quantities {
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
                                 ^
    39:                      K_function, (x, n_obs, alpha, rho), theta_0, 1,2,3,4,5.5);
    40:  }
   -------------------------------------------------

The sixth control parameter (max_steps_line_search) to "laplace_latent_tol_rng"
must be int. Instead found type real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol6.stan
Semantic error in 'bad_tol6.stan', line 39, column 56 to column 63:
   -------------------------------------------------
    37:  generated quantities {
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      K_function, (x, n_obs, alpha, rho), theta_0, 1,2,3,4,5,6);
                                                                 ^
    40:  }
   -------------------------------------------------

Received 7 control arguments at the end of the call to "laplace_latent_tol_rng".
Expected 6 arguments for the control parameters instead.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol7.stan
Semantic error in 'bad_tol7.stan', line 39, column 76 to column 77:
   -------------------------------------------------
    37:  generated quantities {
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                       K_function, (x, n_obs, alpha, rho), theta_0, 1,2,3,4.0,5);
                                                                                     ^
    40:  }
   -------------------------------------------------

The fifth control parameter (solver) to "laplace_latent_tol_rng" must be int.
Instead found type real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol8.stan
Semantic error in 'bad_tol8.stan', line 39, column 72 to column 73:
   -------------------------------------------------
    37:  generated quantities {
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      K_function, (x, n_obs, alpha, rho), theta_0, 1,2,3i,4,5);
                                                                                 ^
    40:  }
   -------------------------------------------------

The fourth control parameter (hessian_block_size) to "laplace_latent_tol_rng"
must be int. Instead found type complex.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol9.stan
Semantic error in 'bad_tol9.stan', line 39, column 71 to column 72:
   -------------------------------------------------
    37:  generated quantities {
    38:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    39:                      K_function, (x, n_obs, alpha, rho), theta_0, 1,{2},3,4,5);
                                                                                ^
    40:  }
   -------------------------------------------------

The third control parameter (max_num_steps) to "laplace_latent_tol_rng"
must be int. Instead found type array[] int.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args1.stan
Semantic error in 'missing_args1.stan', line 2, column 12 to column 30:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_marginal".
The valid signature of this function is
laplace_marginal((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...))
However, we received the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args2.stan
Semantic error in 'missing_args2.stan', line 2, column 12 to column 34:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_marginal_tol".
The valid signature of this function is
laplace_marginal_tol((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...), vector, data real, data int, data int,
  data int, data int)
However, we received the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args3.stan
Semantic error in 'missing_args3.stan', line 2, column 12 to column 58:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_neg_binomial_2_log_lpmf();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_marginal_tol_neg_binomial_2_log_lpmf"
for the likelihood:
Expected 4 arguments but got 0 arguments.
Expected the arguments to start with:
(array[] int, array[] int, vector, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args4.stan
Semantic error in 'missing_args4.stan', line 29, column 12 to column 59:
   -------------------------------------------------
    27:  }
    28:  model {
    29:    target += laplace_marginal(ll_function, (eta, log_ye, y));
                     ^
    30:  
    31:  }
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_marginal".
The valid signature of this function is
laplace_marginal((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...))
However, we received the types:
((vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int))
Typechecking failed after checking the first 2 arguments. Please ensure you
are passing enough arguments and that the 3rd is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args5.stan
Semantic error in 'missing_args5.stan', line 3, column 20 to column 40:
   -------------------------------------------------
     1:  
     2:  generated quantities {
     3:    vector[2] theta = laplace_latent_rng();
                             ^
     4:  }
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_latent_rng".
The valid signature of this function is
laplace_latent_rng((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...))
However, we received the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args6.stan
Semantic error in 'missing_args6.stan', line 40, column 22 to column 71:
   -------------------------------------------------
    38:  generated quantities {
    39:  
    40:  vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y));
                               ^
    41:  
    42:  
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_latent_rng".
The valid signature of this function is
laplace_latent_rng((vector, T_l...) => real, tuple(T_l...), vector,
  (T_k...) => matrix, tuple(T_k...))
However, we received the types:
(data (vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int))
Typechecking failed after checking the first 2 arguments. Please ensure you
are passing enough arguments and that the 3rd is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args7.stan
Semantic error in 'missing_args7.stan', line 18, column 24 to line 19, column 23:
   -------------------------------------------------
    16:  generated quantities {
    17:  
    18:    vector[n_obs] theta = laplace_latent_neg_binomial_2_log_rng(y, {1}, [1.0]', [0.0]'
                                 ^
    19:                        );
    20:  
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_latent_neg_binomial_2_log_rng".
The valid signature of this function is
laplace_latent_neg_binomial_2_log_rng(array[] int, array[] int, vector,
  vector, vector, (T_k...) => matrix, tuple(T_k...))
However, we received the types:
(data array[] int, data array[] int, data vector, data vector)
Typechecking failed after checking the first 4 arguments. Please ensure you
are passing enough arguments and that the 5th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args8.stan
Semantic error in 'missing_args8.stan', line 2, column 12 to column 65:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_poisson_log_lpmf({1}, {1}, [0]');
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function "laplace_marginal_tol_poisson_log_lpmf".
The valid signature of this function is
laplace_marginal_tol_poisson_log_lpmf(array[] int, array[] int, vector,
  vector, (T_k...) => matrix, tuple(T_k...), vector, data real, data int,
  data int, data int, data int)
However, we received the types:
(data array[] int, data array[] int, data vector)
Typechecking failed after checking the first 3 arguments. Please ensure you
are passing enough arguments and that the 4th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args9.stan
Semantic error in 'missing_args9.stan', line 40, column 24 to line 41, column 59:
   -------------------------------------------------
    38:  generated quantities {
    39:  
    40:    vector[n_obs] theta = laplace_latent_tol_neg_binomial_2_log_rng(y, {1}, [1.0]', [0]',
                                 ^
    41:                          K_function, (x, n_obs, alpha, rho));
    42:  
   -------------------------------------------------

Received 0 control arguments at the end of the call to "laplace_latent_tol_neg_binomial_2_log_rng".
Expected 6 arguments for the control parameters instead.
[exit 1]
